--- a/src/app/components/my-share-buttons/my-share-buttons.component.html
+++ b/src/app/components/my-share-buttons/my-share-buttons.component.html
@@ -1,3 +1,3 @@
-<share-button style="width: 30px !important;" [url]="url" button="facebook"></share-button>
-<share-button style="width: 30px !important;" [url]="url" button="twitter"></share-button>
-<share-button style="width: 30px !important;" [url]="url" button="whatsapp"></share-button>
+<button shareButton="facebook"><i class="fa fa-facebook"></i></button>
+<button md-raised-button shareButton="twitter"><i class="fa fa-twitter"></i></button>
+<button md-raised-button shareButton="whatsapp"><i class="fa fa-whatsapp"></i></button>
