Fixed uplaoding image for news form. Minor cosmetic fixes on news preview and horoscope page.

--- a/src/app/components/news-form/news-form.component.html
+++ b/src/app/components/news-form/news-form.component.html
@@ -14,17 +14,10 @@
 
     <div class="form-group">
       <label for="image">Насловна слика:</label>
-      <image-upload 
-        id = "image"
-        (uploadFinished)="onUploadFinished($event)"
-        [max]="1"
-        [url]="'https://api.imgur.com/3/image'"
-        [headers]="{ Authorization: 'Client-ID c76dc3791023b1e'}"
-        buttonCaption="Изабери слике" 
-        dropBoxMessage="Превуци слике овде..." s
-        clearButtonCaption="Избриши све..."></image-upload>
+      <input type="button" value="Изабери слику" (click)="onUploadButtonClick($event)" />
+      <div>{{ uploadedImageName }}</div>
     </div>
-    
+
     <button *ngIf="!editMode" type="submit" class="btn btn-primary">Додај</button>
     <button *ngIf="editMode" type="submit" class="btn btn-primary">Измени</button>
   </form>
