--- a/src/app/components/news/news.component.css
+++ b/src/app/components/news/news.component.css
@@ -18,8 +18,12 @@
     color: grey;
 }
 
+.action-buttons {
+  margin-bottom: 15px;
+}
+
 @media only screen and (max-width: 600px) {
-    .main-container {   
+    .main-container {
         margin-top: 15px;
         margin-left: 10px;
     }
@@ -27,11 +31,11 @@
         margin-top: 10px;
         margin-right: 10px;
     }
-    
+
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
-    .main-container {   
+    .main-container {
         margin-top: 15px;
         margin-left: 10px;
     }
