Removed radio on small screen devices. Updated bootstrap version. Navbar is correctly collapsing after selecting page.

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,54 +1,75 @@
 @media (min-width: 768px){
-    .navbar-nav {
-        margin: 0 auto;
-        display: table;
-        table-layout: auto;
-        float: none;
-        width: 100%;
-    }
-    .navbar-nav > li {
-        display: table-cell;
-        float: none;
-        text-align: center;
-    }
-    .menu-label {
-        display: none;
-    }
-} 
+  .navbar-brand {
+    display: block;
+  }
 
-@media (max-width: 768px){
-    .navbar-nav {
-        width: 100%;
-    }
-    .navbar-nav > li {
-        text-align: center;
-    }
-    ul {
-        padding: 0;
-        margin: 0;
-    }
-    .menu-label {
-        color: white; 
-        margin-right: 20px;
-    }
-} 
+  .navbar-nav {
+    margin: 0 auto;
+    display: table;
+    table-layout: auto;
+    float: none;
+    width: 100%;
+  }
 
-.navbar-collapse {
+  .navbar-nav > li {
+    display: table-cell;
+    float: none;
+    text-align: center;
+  }
+  .menu-label {
+    display: none;
+  }
+  .navbar-collapse {
     padding-left: 0 !important;
     padding-right: 0 !important;
+  }
+}
+
+@media (max-width: 768px){
+  .navbar-brand {
+    display: block;
+  }
+
+  .navbar-nav {
+    width: 100%;
+  }
+  .navbar-nav > li {
+    text-align: center;
+  }
+  ul {
+    padding: 0;
+    margin: 0;
+  }
+  .menu-label {
+      color: white;
+      margin-right: 20px;
+  }
+  .navbar-collapse {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+.navbar-brand {
+  display: none;
+}
+
+.navbar-collapse {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .navbar-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 li a:hover {
-    background-color: #111;
+  background-color: #111;
 }
 
 .active {
-    background-color: #595959 !important;
-    color: white !important;
+  background-color: #595959 !important;
+  color: white !important;
 }
