--- a/src/app/components/news-list/news-list.component.html
+++ b/src/app/components/news-list/news-list.component.html
@@ -17,10 +17,10 @@
                         autoHide="false"
                         previousLabel="Претходна"
                         nextLabel="Следећа"
-                        screenReaderPaginationLabel="Pagination"
+                        screenReaderPaginationLabel="Странице"
                         screenReaderPageLabel="page"
-                        screenReaderCurrentLabel="You're on page">
+                        screenReaderCurrentLabel="Тренутна страница">
                       </pagination-controls>
 
-                  
+
 </div>
