--- a/src/app/components/radio/radio.component.css
+++ b/src/app/components/radio/radio.component.css
@@ -3,8 +3,8 @@
     margin: 5px;
 }
 
-.main-container {   
-    border: 1px solid #d0e1e1; 
+.main-container {
+    border: 1px solid #d0e1e1;
     height: 40px;
     width: 500px;
     display: flex;
@@ -55,44 +55,18 @@
     margin-left: 10px;
 }
 
-@media only screen and (max-width: 600px) {
-    .main-container {   
-        border: 1px solid #d0e1e1;  
-        height: 40px;
-        width: 95%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row;
-        margin-left: -85%;
-        background: rgb(255, 255, 255);
-        transition: margin-left 0.5s linear;
-    }
+.changing-station {
+  height: 20px;
+}
 
-    .activated {
-        margin-left: 10px;
+@media only screen and (max-width: 600px) {
+    .main-container {
+        display: none;
     }
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
-    .main-container {   
-        border: 1px solid #d0e1e1;  
-        height: 40px;
-        width: 95%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row;
-        margin-left: -85%;
-        background: rgb(255, 255, 255);
-        transition: margin-left 0.5s linear;
+    .main-container {
+        display: none;
     }
-
-    .activated {
-        margin-left: 10px;
-    }
- }
-
- .changing-station {
-     height: 20px;
  }
