--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,12 +10,27 @@
 }
 
 .router-container {
-    padding: 45px;
+    padding: 35px;
 }
 
+.radio {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  left: 0;
+  bottom: 0;
+}
+
+
 @media only screen and (max-width: 600px) {
+    .main-container {
+        padding-top: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
+    }
+
     .router-container {
-        padding: 10px;
+        padding: 2px;
     }
 
     .radio {
@@ -25,12 +40,4 @@
         left: 0;
         bottom: 0;
     }
-}
-
-.radio {
-    position: fixed;
-    width: 100%;
-    height: 50px;
-    left: 0;
-    bottom: 0;
 }
