--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,24 +1,18 @@
-<nav class="navbar navbar-inverse">
-    <div>
-      <div class="navbar-header">  
-          <span class="menu-label">Meни</span>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/home">Почетна</a></li>
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/news">Вести</a></li>
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/pictures">Слике</a></li>
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/videos">Видео</a></li>
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/weather_report">Временска прогноза</a></li>
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/horoscope">Хороскоп</a></li>
-          <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/contact">Контакт</a></li>
-        </ul>
-      </div>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Мени</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="nav navbar-nav">
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/home">Почетна</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/news">Вести</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link"  [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/pictures">Слике</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/videos">Видео</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/weather_report">Временска прогноза</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/horoscope">Хороскоп</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/contact">Контакт</a></li>
+    </ul>
+  </div>
 </nav>
