Refactored services. Implemented images page.

--- a/src/app/components/comment-list/comment-list.component.css
+++ b/src/app/components/comment-list/comment-list.component.css
@@ -1,7 +1,17 @@
 .main-container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 textarea {
-    resize: "none";
+  resize: "none";
+}
+
+.comment-list {
+  margin-top: 20px;
+  margin-left: 1em;
+}
+
+.comment-form {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
