--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <ul class="nav navbar-nav">
       <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/home">Почетна</a></li>
       <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/news">Вести</a></li>
-      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link"  [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/pictures">Слике</a></li>
+      <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link"  [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/images">Слике</a></li>
       <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/videos">Видео</a></li>
       <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/weather_report">Временска прогноза</a></li>
       <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item"><a class="nav-link" [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/horoscope">Хороскоп</a></li>
