--- a/src/app/components/comment-list/comment-list.component.html
+++ b/src/app/components/comment-list/comment-list.component.html
@@ -3,15 +3,17 @@
 </div>
 
 <div *ngIf="isLoaded" class="main-container">
-  <div *ngIf="!isAddingComment">
+  <div class="comment-form" *ngIf="!isAddingComment">
       <textarea style="resize:none" placeholder="Коментар..." class="form-control" rows="3" [(ngModel)]="content"></textarea>
       <input type="button" style="margin-top: 20px" class="btn btn-primary" value="Постави" (click)="onSubmit()">
   </div>
   <app-spin-loader *ngIf="isAddingComment"></app-spin-loader>
   <h3>Коментари</h3>
-  <div *ngIf="allComments.length == 0">Нема коментара.</div>
-  <div *ngFor="let comment of allComments.slice().reverse()">  
-    <app-comment [comment]="comment"></app-comment>
-    <hr>
+  <div class="comment-list">
+    <div *ngIf="allComments.length == 0">Нема коментара.</div>
+    <div *ngFor="let comment of allComments.slice().reverse()">
+      <app-comment [comment]="comment"></app-comment>
+      <hr>
+    </div>
   </div>
 </div>
