--- a/src/app/components/images/images.component.css
+++ b/src/app/components/images/images.component.css
@@ -11,6 +11,16 @@
   height: auto;
   margin: 10px;
   flex-grow: 0;
+  display: flex;
+}
+
+.image {
+  width: 90%
+}
+
+.action-button {
+  margin: 1px;
+  width: 40px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -28,6 +38,9 @@
     height: auto;
     margin-bottom: 10px;
     flex-grow: 0;
+  }
+  .image {
+    width: 90%
   }
 
 }
