--- a/src/app/components/images/images.component.css
+++ b/src/app/components/images/images.component.css
@@ -32,17 +32,13 @@
   }
 
   .image-preview {
-    width: 80%;
+    width: auto;
     align-self: center;
     justify-content: center;
-    height: auto;
+    height: 80%;
     margin-bottom: 10px;
     flex-grow: 0;
   }
-  .image {
-    width: 90%
-  }
-
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
@@ -54,10 +50,10 @@
   }
 
   .image-preview {
-    width: 80%;
+    width: auto;
     align-self: center;
     justify-content: center;
-    height: auto;
+    height: 80%;
     margin-bottom: 10px;
     flex-grow: 0;
   }
