--- a/src/app/components/images/images.component.css
+++ b/src/app/components/images/images.component.css
@@ -41,8 +41,8 @@
   }
 
   .image {
-    width: 80%;
-    height: auto;
+    width: 90%;
+    height: 100%;
   }
 }
 
@@ -64,7 +64,7 @@
   }
 
   .image {
-    width: 80%;
-    height: auto;
+    width: 90%;
+    height: 100%;
   }
 }
